fixed header button spacing

--- a/styles/sass/_main.scss
+++ b/styles/sass/_main.scss
@@ -277,7 +277,7 @@
 @media (max-width: 450px) {
    .wrap {
       left: 62%;
-      top: 4%;
+      top: 4.5%;
    }
    .bookButton {
       font-size: 17px;
