--- a/styles/sass/styles.css
+++ b/styles/sass/styles.css
@@ -852,7 +852,7 @@ header h2 {
 @media (max-width: 450px) {
   .wrap {
     left: 62%;
-    top: 4%;
+    top: 4.5%;
   }
   .bookButton {
     font-size: 17px;
